# python-bsonjs

./: .gitignore  .gitmodules  .travis.yml  CHANGELOG.rst  MANIFEST.in  README.md  README.rst  benchmark.py  build-wheels.sh  docker-build.sh  pyproject.toml  setup.cfg  setup.py  vendor.sh
.github/: dependabot.yml
.github/workflows/: dist.yml  release-python.yml  test.yml
bsonjs/: bsonjs.c
bsonjs/bson/: bson-error.c  bson-version.h
src/: bsonjs.c  bsonjs.h
src/bson/: CTestTestfile.cmake  Makefile  bson-compat.h  bson-config.h  bson-iter.c  bson-version.h  cmake_install.cmake
src/jsonsl/: CTestTestfile.cmake  Makefile  cmake_install.cmake
test/: __init__.py  test_bsonjs.py
